SOC-3728 | Missing variables in the configuration

--- a/plf-packaging-resources/src/main/resources/configuration.properties
+++ b/plf-packaging-resources/src/main/resources/configuration.properties
@@ -59,6 +59,11 @@ gatein.email.domain.url=${domain.url:http://localhost:8080}
 # Sample: gatein.email.smtp.from=intranet@mycompany.com
 gatein.email.smtp.from=${smtp.from:noreply@exoplatform.com}
 
+# Portal's name display in "from" field of email notification.
+# Default value: eXo
+# Sample: exo.notifications.portalname=eXo
+exo.notifications.portalname=${exo.portalname:eXo}
+
 # SMTP Server hostname.
 # Should be configured from environment variable EXO_EMAIL_SMTP_HOST (See bin/setenv-customize.sample.(sh|bat) for more details)
 # Default value: localhost
